término da home

--- a/1° semestre/HTML/24-04/exercicio1/App/home/home.html
+++ b/1° semestre/HTML/24-04/exercicio1/App/home/home.html
@@ -43,7 +43,7 @@
 
         <section class="row principal mt-4">
 
-            <div class="col-7 my-auto">
+            <div class="col-md-7 my-auto">
                 <article>
                     <h1>Notícia</h1>
 
@@ -55,9 +55,9 @@
                 </article>
             </div>
 
-            <div class="col-1"></div>
+            <div class="col-md-1"></div>
 
-            <div class="col-4 my-auto">
+            <div class="col-md-4 my-auto lateral">
                 <article>
                     <h3>Notícia</h3>
                     <p>
@@ -72,7 +72,7 @@
 
         <section class="row principal mt-3">
 
-            <div class="col-7 my-auto">
+            <div class="col-md-7 my-auto">
                 <article>
                     <h1>Notícia</h1>
 
@@ -84,9 +84,40 @@
                 </article>
             </div>
 
-            <div class="col-1"></div>
+            <div class="col-md-1"></div>
 
-            <div class="col-4 my-auto">
+            <div class="col-md-4 my-auto lateral">
+                <article>
+
+                    <h3>Notícia</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, ut impedit quidem totam aliquid
+                        enim dolore officiis sunt deleniti? Doloremque corporis dolorem nam beatae fuga delectus numquam
+                        eum minus facilis?
+                    </p>
+
+                </article>
+            </div>
+
+        </section>
+
+        <section class="row principal mt-3">
+
+            <div class="col-md-7 my-auto">
+                <article>
+                    <h1>Notícia</h1>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod facere illo voluptates vel enim
+                        asperiores quo impedit, sed atque quia, modi, nam officiis illum itaque molestias at et
+                        molestiae voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iusto magnam
+                        natus praesentium cupiditate iste laborum tempora aut repudiandae expedita. Quae illo provident
+                        assumenda. Vel molestiae odio error qui rem?</p>
+                </article>
+            </div>
+
+            <div class="col-md-1"></div>
+
+            <div class="col-md-4 my-auto lateral">
                 <article>
 
                     <h3>Notícia</h3>
