--- a/1° semestre/HTML/29-05/site_correio/app/pagina_principal/index.html
+++ b/1° semestre/HTML/29-05/site_correio/app/pagina_principal/index.html
@@ -20,7 +20,7 @@
 
         <ul class="navbar-nav ml-auto lista-dex">
             <li class="nav-item">
-                <a onclick="Menu()" class="">
+                <a onclick="Menu()" class="icone-barra">
                     <i class="fa-solid fa-bars"></i>
                 </a>
             </li>
@@ -53,10 +53,10 @@
 
                 <img class="col-1 mx-3 caixa-img" src="../../img/caixa.png" alt="caixa de entrega">
 
-                <input type="text" name="entrega" id="entrega" class="col-9 col-md-11 col-lg-9" placeholder="Digite o código da entrega"
+                <input type="text" name="entrega" id="entrega" class="col-9 col-md-11 col-lg-9 input-dex" placeholder="Digite o código da entrega"
                     required>
 
-                <button class="btn btn-primary col-3 col-md-1">
+                <button class="btn btn-primary col-3 col-md-1 icone-lupa">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </article>
