--- a/1° semestre/HTML/05-06/LinhaDoTempo/index.html
+++ b/1° semestre/HTML/05-06/LinhaDoTempo/index.html
@@ -48,7 +48,7 @@
 
         <section class="conteudo">
             <h1>2025</h1>
-            <p>Em 2025 comecei a me aprofundar mais em programação e desenvolvimento web. Começando a fazer alguns
+            <p>Em 2025, comecei a me aprofundar mais em programação e desenvolvimento web. Começando a fazer alguns
                 cursos online e praticar programação web, logo comecei a criar meu primeiros projetos e a me
                 familiarizar com as tecnologias mais utilizadas.</p>
         </section>
